# LangChainProject

./: .gitignore  main.py  pyproject.toml
Agent创建和调用和输出/: 1_agent_chat.py  4_Structured_output.py
LangChain/Agent_LangChain/: 1_agent_chat.py  2_memory.py  3_middleware.py  6_LangSmith.py
LangChain/Agent_LangChain/5_RAG/: 5_1_build_chroma.py  5_2_query.py  5_3_RAGasTool.py
LangChain/client连本地 MCP服务器/: mcpServer.py
LangGraph/: 1_base.py  2_chain.py  3_MultiAgent.py
client连本地 MCP服务器/: client.py
doc/: Project_technology.md
utils/: utils.py
