[project]
name = "agentproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "any>=0.0.2",
    "fastmcp>=3.3.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.0",
    "opentelemetry-proto>=1.42.0",
    "protobuf<7",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
